<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    tools:context=".ProfileSetting"
    android:orientation="vertical"
    android:background="#E6E6E6">

    <TextView
        android:id="@+id/textViewUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/updateProfile"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/textViewUpdateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateProfileDescription" />

    <TextView
        android:id="@+id/textViewDeleteProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/deleteProfile"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/textViewDeleteDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteProfileDescription" />

    <TextView
        android:id="@+id/textViewLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/logOut"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/textViewLogOutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>