<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="#E6E6E6">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="134dp"
                android:layout_height="102dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/aquarium_logo_color"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEmail"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="@string/email"
                android:textColor="#F44336"/>

            <EditText
                android:background="@drawable/edittxt_round_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextEmail"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="#515151"
                android:gravity="center"
                />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPassword"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/password"
                android:textColor="#F44336"/>

            <EditText
                android:background="@drawable/edittxt_round_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextPassword"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:textColor="#515151"
                android:gravity="center"/>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewConfirm"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/confirmPassword"
                android:textColor="#F44336"/>

            <EditText
                android:background="@drawable/edittxt_round_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextConfirm"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:textColor="#515151"
                android:gravity="center"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/buttonContinue"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/continuee"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_round_corner"
                />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="Already have an account?"/>

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Login"
                android:textColor="#2196F3" />

            <LinearLayout
                android:layout_width="156dp"
                android:layout_height="21dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    app:srcCompat="@drawable/google" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Google" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>