<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#E6E6E6">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="134dp"
                android:layout_height="102dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/aquarium_logo_color" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textColor="#f86765" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittxt_round_corner"
                android:ems="10"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#515151" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="#f86765" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittxt_round_corner"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:text=""
                android:textAlignment="center"
                android:textColor="#515151" />


            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_round_corner"
                android:text="@string/login"
                android:textColor="#FFFFFF" />


            <TextView
                android:id="@+id/textView1"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="Don't have an account?"/>

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="Create Account"
                android:textColor="#2196F3" />

            <LinearLayout
                android:layout_width="156dp"
                android:layout_height="21dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    app:srcCompat="@drawable/google" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Google" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_below="@+id/edtPrice"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="18dp"
                android:visibility="invisible"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>